ansible: privilege escalation for non-root users
- use become for actions that need root privileges
- explicitly specify GIMME_GO_VERSION for gimme call
- removed call to chsh, as this is performed py ohmyzsh setup
- create empty directory for ~/.local/share/fonts before using it

--- a/install/playbooks/roles/common/tasks/main.yml
+++ b/install/playbooks/roles/common/tasks/main.yml
@@ -2,11 +2,13 @@
   apt:
     update-cache: yes
     upgrade: dist
+  become: true
 
 - name: Install additional packages through apt
   apt:
     name: "{{ item }}"
     state: present
+  become: true
   with_items:
     - git
     - vim
