--- a/install/playbooks/roles/i3/tasks/main.yml
+++ b/install/playbooks/roles/i3/tasks/main.yml
@@ -2,6 +2,7 @@
   apt:
     name: "{{ item }}"
     state: present
+  become: true
   with_items:
     - i3
     - i3blocks
@@ -12,6 +13,7 @@
 - name: Install playerctl
   apt:
     deb: https://github.com/acrisci/playerctl/releases/download/v0.5.0/playerctl-0.5.0_amd64.deb
+  become: true
 
 - name: Link i3 config
   file:
