--- a/install/playbooks/roles/python/tasks/main.yml
+++ b/install/playbooks/roles/python/tasks/main.yml
@@ -2,7 +2,9 @@
   apt:
     name: python3-pip
     state: present
+  become: true
 
 - name: Install flake8
   command: pip3 install flake8
+  become: true
 
