--- a/install/ansible/roles/go/tasks/main.yml
+++ b/install/ansible/roles/go/tasks/main.yml
@@ -3,3 +3,4 @@
     src: https://storage.googleapis.com/golang/go1.9.1.linux-amd64.tar.gz
     dest: /usr/local
     remote_src: yes
+  become: true
